fix(side-menu): fix side-menu-collapse-button focus

--- a/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
+++ b/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
@@ -28,10 +28,6 @@
   }
 }
 
-:host(:focus-visible) {
-  @include tds-focus-state-side-menu;
-}
-
 @media (min-width: $grid-lg) {
   :host {
     display: block;
